--- a/index.html
+++ b/index.html
@@ -1,40 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ronald Langat | Physics Tutor</title>
-  <link rel="stylesheet" href="assets/style.css"/>
-  <script defer src="assets/script.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ronald Langat - Physics Educator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@tailwindcss/browser@latest"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        /* Custom styles for animations and enhanced UI - Refined */
+        .animate-fade-in {
+            animation: fadeIn 1s ease-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        .animate-slide-in-left {
+            animation: slideInLeft 0.8s ease-out;
+        }
+        @keyframes slideInLeft {
+            from { transform: translateX(-20px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+        .animate-slide-in-right {
+            animation: slideInRight 0.8s ease-out;
+        }
+        @keyframes slideInRight {
+            from { transform: translateX(20px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+        .hover\:scale-105:hover {
+            transform: scale(1.05);
+            transition: transform 0.2s ease-in-out;
+        }
+        .shadow-lg { /* Tailwind's shadow-lg is already quite good, but can add a subtle tweak */
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
+        }
+        .bg-gradient-to-r { /* Ensure gradient is defined */
+            background-image: linear-gradient(to right, #6b7280, #374151); /* Example gradient */
+        }
+
+    </style>
 </head>
-<body>
-  <header>
-    <h1 class="animate-fade">Ronald Langat</h1>
-    <p class="subtitle">IGCSE & A Level Physics Tutor</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="blog.html">Blog</a>
-    </nav>
-  </header>
-  <main>
-    <section class="intro">
-      <h2>Welcome</h2>
-      <p>I’m a passionate Physics tutor specializing in IGCSE and A Level education. I blend deep subject knowledge with engaging instruction to help students succeed worldwide.</p>
-    </section>
-    <section class="resources">
-      <h2>Portfolio</h2>
-      <ul>
-        <li><i class="fas fa-file-alt"></i> <a href="assets/Ronald_Langat_Resume.pdf" target="_blank">Download My Resume</a></li>
-        <li><i class="fas fa-book"></i> <a href="assets/lesson-slide.txt" target="_blank">Sample Lesson Slide</a></li>
-        <li><i class="fas fa-clipboard"></i> <a href="assets/worksheet.txt" target="_blank">Sample Worksheet</a></li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Ronald Langat</p>
-  </footer>
+<body class="bg-gray-100 font-inter">
+    <header class="bg-gradient-to-r text-white py-6 shadow-md animate-fade-in">
+        <div class="container mx-auto px-4 text-center">
+            <h1 class="text-3xl font-bold mb-2">Ronald Langat</h1>
+            <p class="text-xl">Physics Educator</p>
+            <nav class="mt-4">
+                <a href="#home" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-lg font-semibold transition-colors">Home</a>
+                <a href="#about" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-lg font-semibold transition-colors">About</a>
+                <a href="#portfolio" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-lg font-semibold transition-colors">Portfolio</a>
+                <a href="#contact" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-lg font-semibold transition-colors">Contact</a>
+                <a href="#blog" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-lg font-semibold transition-colors">Blog</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container mx-auto px-4 py-8">
+        <section id="home" class="text-center py-16 animate-slide-in-left">
+            <h2 class="text-4xl font-semibold text-gray-800 mb-4">Welcome</h2>
+            <p class="text-xl text-gray-700 mb-6">
+                I am a passionate Physics educator specializing in IGCSE and A Level curricula.  My goal is to
+                empower students worldwide to achieve success in Physics through engaging and effective
+                instruction.
+            </p>
+             <a href="#about" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-full transition-colors duration-300
+                           shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+                Learn More
+            </a>
+        </section>
+
+        <section id="about" class="text-gray-700 py-16 animate-slide-in-right">
+            <h2 class="text-4xl font-semibold text-gray-800 mb-6 text-center">About Me</h2>
+            <div class="grid md:grid-cols-2 gap-8 items-center">
+                <div>
+                    <p class="text-lg mb-4">
+                        Hello! I'm Ronald Langat, a dedicated Physics tutor with 2 years of experience.  I have a proven track
+                        record of delivering engaging and comprehensive Physics instruction for IGCSE and A Level students.
+                        Currently, I am a Tutor at Impact Homeschool and Tuition Centre, where I provide personalized and
+                        asynchronous learning experiences.
+                    </p>
+                    <ul class="list-disc list-inside space-y-2">
+                        <li class="text-lg">Expertise in IGCSE & A Level Physics</li>
+                        <li class="text-lg">Experienced in virtual and in-person instruction</li>
+                        <li class="text-lg">Passionate about supporting EAL learners</li>
+                        <li class="text-lg">Committed to providing constructive feedback and designing effective lessons</li>
+                    </ul>
+                </div>
+                <div class="text-center">
+                     <img src="placeholder_image.jpg" alt="Ronald Langat" class="rounded-lg shadow-lg w-full max-w-md mx-auto" />
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio" class="py-16 animate-slide-in-left">
+            <h2 class="text-4xl font-semibold text-gray-800 mb-8 text-center">Portfolio</h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 hover:scale-105">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Resume</h3>
+                    <p class="text-gray-600 mb-4">
+                        View my professional experience and qualifications.
+                    </p>
+                    <a href="assets/Ronald_Langat_Resume.pdf" target="_blank" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-full transition-colors duration-300
+                                   shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-opacity-50">
+                         <i class="fas fa-file-alt mr-2"></i> Download Resume
+                    </a>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 hover:scale-105">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Sample Lesson Slide</h3>
+                    <p class="text-gray-600 mb-4">
+                        A sample lesson slide demonstrating my teaching style.
+                    </p>
+                    <a href="assets/lesson-slide.txt" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full transition-colors duration-300
+                                   shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-50">
+                        <i class="fas fa-book mr-2"></i> View Slide
+                    </a>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 hover:scale-105">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Sample Worksheet</h3>
+                    <p class="text-gray-600 mb-4">
+                       Example of a worksheet I've designed.
+                    </p>
+                    <a href="assets/worksheet.txt" target="_blank" class="bg-purple-500 hover:bg-purple-600 text-white font-semibold py-2 px-4 rounded-full transition-colors duration-300
+                                   shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-opacity-50">
+                        <i class="fas fa-clipboard mr-2"></i> View Worksheet
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="py-16 text-center animate-slide-in-right">
+            <h2 class="text-4xl font-semibold text-gray-800 mb-8">Contact Me</h2>
+            <p class="text-xl text-gray-700 mb-4">
+                Feel free to reach out to me through any of the following channels:
+            </p>
+            <div class="space-y-4">
+                <p class="text-lg"><strong>Email:</strong> <a href="mailto:ronaldlangat775@gmail.com" class="text-blue-600 hover:text-blue-800 transition-colors">ronaldlangat775@gmail.com</a></p>
+                <p class="text-lg"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ronald-langat-a50910338" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 transition-colors">linkedin.com/in/ronald-langat</a></p>
+                <p class="text-lg"><strong>Phone:</strong> +254711679415</p>
+            </div>
+        </section>
+
+        <section id="blog" class="py-16 animate-slide-in-left">
+            <h2 class="text-4xl font-semibold text-gray-800 mb-8 text-center">My Blog</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <article class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 hover:scale-105">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Why Asynchronous Feedback Works</h3>
+                    <p class="text-gray-600 mb-4">
+                        Explore the benefits of providing students with clear, written, and recorded feedback, allowing them to reflect,
+                        ask questions, and apply corrections at their own pace.
+                    </p>
+                    <a href="#" class="text-blue-600 hover:text-blue-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                        Read More <i class="fas fa-arrow-right ml-2"></i>
+                    </a>
+                </article>
+                <article class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 hover:scale-105">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Making Physics Relatable</h3>
+                    <p class="text-gray-600 mb-4">
+                       Learn how I use real-world analogies and engaging visuals to help students connect physics theory to practice.
+                    </p>
+                     <a href="#" class="text-blue-600 hover:text-blue-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                        Read More <i class="fas fa-arrow-right ml-2"></i>
+                    </a>
+                </article>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-4 text-center">
+        <p>© 2025 Ronald Langat. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // No need for extensive JS, Tailwind handles most styling and animations.
+        //  Any interactivity can be added here, if needed.
+        console.log("Portfolio website loaded.");
+    </script>
 </body>
 </html>
