--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ronald Langat - Physics Educator</title>
+    <title>Ronald Langat - A-Level and IGCSE Physics Teacher</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@latest"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -76,6 +76,7 @@
             <h2 class="text-4xl font-semibold text-gray-800 mb-6 text-center">About Me</h2>
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div>
+                    <img src="assets/1744195304682.jpg" alt="Ronald Langat" class="rounded-lg shadow-lg w-full max-w-md mx-auto mb-6 rounded-full border-4 border-gray-200" style="object-fit: cover; height: 300px; width: 300px;" />
                     <p class="text-lg mb-4">
                         Hello! I'm Ronald Langat, a dedicated Physics tutor with 2 years of experience.  I have a proven track
                         record of delivering engaging and comprehensive Physics instruction for IGCSE and A Level students.
@@ -89,8 +90,29 @@
                         <li class="text-lg">Committed to providing constructive feedback and designing effective lessons</li>
                     </ul>
                 </div>
-                <div class="text-center">
-                     <img src="placeholder_image.jpg" alt="Ronald Langat" class="rounded-lg shadow-lg w-full max-w-md mx-auto" />
+                <div>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Experience</h3>
+                    <div class="bg-white rounded-lg shadow-md p-6 mb-4">
+                        <h4 class="text-xl font-semibold text-blue-700 mb-2">Physics Tutor</h4>
+                        <p class="text-gray-600 mb-2">Impact Homeschool and Tuition Centre, Nairobi, Kenya — 2023 to Present</p>
+                        <ul class="list-disc list-inside space-y-2 text-gray-700">
+                            <li>Teach IGCSE and A-Level Physics, covering topics such as forces, energy, waves, electricity, and electromagnetism.</li>
+                            <li>Prepare and deliver interactive online lessons and asynchronous resources including video tutorials, lesson slides, and custom worksheets.</li>
+                            <li>Assess student performance through marked assignments and provide detailed written and recorded feedback.</li>
+                            <li>Support international and home-schooled learners in meeting academic goals and exam readiness.</li>
+                            <li>Promote a positive and flexible learning environment tailored to individual student needs.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-md p-6">
+                        <h4 class="text-xl font-semibold text-blue-700 mb-2">Student Teacher (Teaching Practice)</h4>
+                        <p class="text-gray-600 mb-2">Cheptalal Secondary School, Bomet County, Kenya — May 2024 to August 2024</p>
+                        <ul class="list-disc list-inside space-y-2 text-gray-700">
+                            <li>Conducted full Physics lessons for Forms 1–4 under supervision, using learner-centered approaches and practical demonstrations.</li>
+                            <li>Developed daily lesson plans, learning aids, and assessments aligned with the Kenyan 8-4-4 curriculum.</li>
+                            <li>Engaged in staff meetings, parent-teacher interactions, and extracurricular activities as part of the school community.</li>
+                            <li>Received positive feedback from the mentor teacher for lesson delivery, student engagement, and classroom management.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -136,10 +158,19 @@
             <p class="text-xl text-gray-700 mb-4">
                 Feel free to reach out to me through any of the following channels:
             </p>
-            <div class="space-y-4">
-                <p class="text-lg"><strong>Email:</strong> <a href="mailto:ronaldlangat775@gmail.com" class="text-blue-600 hover:text-blue-800 transition-colors">ronaldlangat775@gmail.com</a></p>
-                <p class="text-lg"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ronald-langat-a50910338" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 transition-colors">linkedin.com/in/ronald-langat</a></p>
-                <p class="text-lg"><strong>Phone:</strong> +254711679415</p>
+            <div class="space-y-4 justify-center flex flex-col items-center">
+                <p class="text-lg flex items-center">
+                    <i class="fas fa-envelope mr-2 text-blue-500"></i>
+                    <a href="mailto:ronaldlangat775@gmail.com" class="text-blue-600 hover:text-blue-800 transition-colors">ronaldlangat775@gmail.com</a>
+                </p>
+                <p class="text-lg flex items-center">
+                    <i class="fab fa-linkedin mr-2 text-blue-700"></i>
+                    <a href="https://www.linkedin.com/in/ronald-langat-a50910338" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 transition-colors">linkedin.com/in/ronald-langat</a>
+                </p>
+                <p class="text-lg flex items-center">
+                    <i class="fas fa-phone mr-2 text-green-500"></i>
+                    +254711679415
+                </p>
             </div>
         </section>
 
